--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 node_modules
-avocado/.snowpack
-avocado/build
-avocado/node_modules
-lazyLoad/.snowpack
-lazyLoad/build
-lazyLoad/node_modules
+
+proyectos/avocado/.snowpack
+proyectos/avocado/build
+proyectos/avocado/node_modules
+
+proyectos/lazyLoad/.snowpack
+proyectos/lazyLoad/build
+proyectos/lazyLoad/node_modules
+
 temp/
